--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/websocket": "^1.0.10",
     "framer-motion": "^11.2.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "recoil": "^0.7.7"
+    "react-router-dom": "^6.24.0",
+    "recoil": "^0.7.7",
+    "websocket": "^1.0.35"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
