--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/websocket": "^1.0.10",
     "framer-motion": "^11.2.12",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0",
     "recoil": "^0.7.7",
