--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,17 @@
   "dependencies": {
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/websocket": "^1.0.10",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.2.12",
+    "lucide-react": "^0.475.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0",
     "recoil": "^0.7.7",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
     "websocket": "^1.0.35"
   },
   "devDependencies": {
