--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc -b",
-    "dev": "node dist/index.js",
-    "both": "npm run build & npm run dev"
-  },
+  "build": "npm install --include=dev && tsc -b",
+  "dev": "node dist/index.js",
+  "both": "npm run build & npm run dev"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
